# fast_zero

./: Taskfile.yml  alembic.ini  pyproject.toml
migrations/: env.py
migrations/versions/: 9113517281fe_criação_das_tabelas.py
