[project]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = [
    {name = "Ana Paula Gomes Miranda",email = "paulagomes@unitins.br"}
]
#readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
python-multipart = "^0.0.20"

[tool.flake8]
max-line-length = 120

[tool.poetry]
package-mode = false
