[project]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = [
    {name = "Ana Paula Gomes Miranda",email = "paulagomes@unitins.br"}
]
#readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "fastapi (>=0.115.14,<0.116.0)",
    "alembic (>=1.16.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
python-multipart = "^0.0.20"

[tool.flake8]
max-line-length = 120

[tool.poetry]
package-mode = false
